@@ -25,7 +25,10 @@ Changes in Go4 v4.5.0 (June 2011)
    analysis will be stopped correctly.
 2. Significant changes in event classes. Reincarnation of TGo4CompositeEvent.
    It is now can be used again as output/input of any step. Many errors are fixed.
-         
+3. Add possibility to hide TGo4EventElement members from tree viewer and event
+   viewer. This makes look of data structures, especially in composite events,
+   much more clean. Default is off, can be changed via Settings->Preferences menu.
+   Implemented for both qt3 and qt4 version.          
 
 Changes in Go4 v4.4.3 (March 2011)
 1. Implement proper Ctrl-C handler for Windows platform
